fixed small bugs and layout problems

--- a/frontend/src/styles/Navbar.css
+++ b/frontend/src/styles/Navbar.css
@@ -23,6 +23,8 @@ a {
   text-align: center;
   padding: 0;
   height: 100%;
+  position: relative;
+  z-index: 9999;
 }
 
 /*Adjust position of the logo*/
